POO Pratico/bin/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico
-d
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java
<---- end of javadoc command ---->
Loading source file C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java...
Constructing Javadoc information...
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\contribuintes\Contribuinte.java:26: error: unclosed comment
    /**
    ^
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\contribuintes\Contribuinte.java:111: error: reached end of file while parsing
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\fatura\Fatura.html...
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:98: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:34: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:219: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:134: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:80: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:171: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:152: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:116: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:62: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:189: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:207: warning - @returns is an unknown tag.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:53: warning - @param argument "Contribuinte" is not a parameter name.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:43: warning - @param argument "deducao" is not a parameter name.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:228: warning - @param argument "novo" is not a parameter name.
C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\fatura\Fatura.java:161: warning - @param argument "naturezaDespesa," is not a parameter name.
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\fatura\package-frame.html...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\fatura\package-summary.html...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\constant-values.html...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\serialized-form.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\allclasses-frame.html...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\allclasses-noframe.html...
Generating C:\Users\MarcoFilipeLeitãoDan\Documents\GitHub\POO\POO Pratico\doc\index.html...
17 warnings
